Improve schema-editor README for end users
- Add user-focused Quick Start section
- Document npm serve command that auto-opens browser
- Organize sections: Users first, then Developers
- Add clear step-by-step installation instructions
- Include production build and deployment info
- Document all available npm scripts

--- a/utils/schema-editor/package.json
+++ b/utils/schema-editor/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "serve": "vite --open",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
